Feat: Copy scanned QR code result to clipboard (re-implemented)
- Added 'clipboardWrite' permission to manifest.json.
- Modified background.js to automatically copy the decoded QR code result to the system clipboard after a successful scan.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "clipboardWrite"
   ],
   "background": {
     "scripts": ["index.min.js", "background.js"]
