--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,18 @@
     "storage",
     "clipboardWrite"
   ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "qrcode-scan@4040940.xyz",
+      "strict_min_version": "142.0",
+      "data_collection_permissions": {
+        "required": [ "browsingActivity", "websiteContent", "websiteActivity"],
+        "optional": [
+          "technicalAndInteraction"
+        ]
+      }
+    }
+  },
   "background": {
     "scripts": ["index.min.js", "background.js"]
   },
