--- a/manifest.json
+++ b/manifest.json
@@ -12,20 +12,8 @@
     "storage",
     "clipboardWrite"
   ],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{5e3ce542-9c8b-434d-8922-60c66bbe3987}",
-      "strict_min_version": "142.0",
-      "data_collection_permissions": {
-        "required": [ "browsingActivity", "websiteContent", "websiteActivity"],
-        "optional": [
-          "technicalAndInteraction"
-        ]
-      }
-    }
-  },
   "background": {
-    "scripts": ["index.min.js", "background.js"]
+    "service_worker": "background.js"
   },
   "action": {
     "default_icon": "icons/icon.png",
