fix: Resolve Image is not defined error in background script
- Implemented offscreen document for QR code scanning to handle DOM-related operations.
- Added `offscreen` permission to `manifest.json`.
- Created `offscreen.html` and `offscreen.js` to perform image loading, cropping, and ZXing decoding.
- Modified `background.js` to manage and communicate with the offscreen document, removing direct DOM manipulation.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "activeTab",
     "scripting",
     "storage",
-    "clipboardWrite"
+    "clipboardWrite",
+    "offscreen"
   ],
   "background": {
     "service_worker": "background.js"
